--- a/.github/workflows/pkgdown.yaml
+++ b/.github/workflows/pkgdown.yaml
@@ -47,4 +47,5 @@ jobs:
           git config --local user.email "actions@github.com"
           git config --local user.name "GitHub Actions"
           Rscript -e 'devtools::document()'
+          Rscript -e 'rmarkdown::render("README.Rmd")'
           Rscript -e 'pkgdown::deploy_to_branch(new_process = FALSE)'
